--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ a img:hover {
 #slide2 {
 background-color: #000000;
 color: #ffffff;
-height: 1050px;
+/*height: 1050px;*/
 margin: 0 auto;
 padding: 120px 0 200px;
 overflow: hidden;
